// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.Many2Many for Resource.List Empty 1`] = `
<div>
  <div />
</div>
`;

exports[`Field.Many2Many for Resource.List Hidden 1`] = `
<div>
  <span />
</div>
`;

exports[`Field.Many2Many for Resource.List With one value and slot: Snapshot 1`] = `
<div>
  <div>
    <span
      class="tag"
    >
      <a>
        <div>
          Entry 1
        </div>
      </a>
    </span>
  </div>
</div>
`;

exports[`Field.Many2Many for Resource.List With one value: Snapshot 1`] = `
<div>
  <div>
    <span
      class="tag"
    >
      <a>
        Title: Entry 1
      </a>
    </span>
  </div>
</div>
`;

exports[`Field.Many2Many for Resource.List With style 1`] = `
<div>
  <div>
    <span
      class="tag"
      style="color: red;"
    >
      <a>
        Title: Entry 1
      </a>
    </span>
    <span
      class="tag"
      style="color: blue;"
    >
      <a>
        Title: Entry 2
      </a>
    </span>
  </div>
</div>
`;

exports[`Field.Many2Many for Resource.List With two value and slot: Snapshot 1`] = `
<div>
  <div>
    <span
      class="tag"
    >
      <a>
        <div>
          Entry 1
        </div>
      </a>
    </span>
    <span
      class="tag"
    >
      <a>
        <div>
          Entry 2
        </div>
      </a>
    </span>
  </div>
</div>
`;

exports[`Field.Many2Many for Resource.List With two value: Snapshot 1`] = `
<div>
  <div>
    <span
      class="tag"
    >
      <a>
        Title: Entry 1
      </a>
    </span>
    <span
      class="tag"
    >
      <a>
        Title: Entry 2
      </a>
    </span>
  </div>
</div>
`;

exports[`Field.Many2Many for Resource.Thumbnail Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
      
    <!---->
  </div>
</span>
`;

exports[`Field.Many2Many for Resource.Thumbnail Empty 2`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
      
    <!---->
  </div>
</span>
`;

exports[`Field.Many2Many for Resource.Thumbnail Hidden 1`] = `<div />`;

exports[`Field.Many2Many for Resource.Thumbnail Hidden 2`] = `<div />`;

exports[`Field.Many2Many for Resource.Thumbnail With one value and slot: Snapshot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span
      class="tag"
    >
      <a>
        <div>
          Entry 1
        </div>
      </a>
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2Many for Resource.Thumbnail With one value: Snapshot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span
      class="tag"
    >
      <a>
        Title: Entry 1
      </a>
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2Many for Resource.Thumbnail With one value: Snapshot 2`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span
      class="tag"
    >
      <a>
        Title: Entry 1
      </a>
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2Many for Resource.Thumbnail With style 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field has-addons"
    style="width: inherit;"
  >
    <!---->
     
    <span
      class="tag"
      style="color: red;"
    >
      <a>
        Title: Entry 1
      </a>
    </span>
    <span
      class="tag"
      style="color: blue;"
    >
      <a>
        Title: Entry 2
      </a>
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2Many for Resource.Thumbnail With style 2`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field has-addons"
    style="width: inherit;"
  >
    <!---->
     
    <span
      class="tag"
      style="color: red;"
    >
      <a>
        Title: Entry 1
      </a>
    </span>
    <span
      class="tag"
      style="color: blue;"
    >
      <a>
        Title: Entry 2
      </a>
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2Many for Resource.Thumbnail With two value and slot: Snapshot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field has-addons"
    style="width: inherit;"
  >
    <!---->
     
    <span
      class="tag"
    >
      <a>
        <div>
          Entry 1
        </div>
      </a>
    </span>
    <span
      class="tag"
    >
      <a>
        <div>
          Entry 2
        </div>
      </a>
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2Many for Resource.Thumbnail With two value: Snapshot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field has-addons"
    style="width: inherit;"
  >
    <!---->
     
    <span
      class="tag"
    >
      <a>
        Title: Entry 1
      </a>
    </span>
    <span
      class="tag"
    >
      <a>
        Title: Entry 2
      </a>
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2Many for Resource.Thumbnail With two value: Snapshot 2`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field has-addons"
    style="width: inherit;"
  >
    <!---->
     
    <span
      class="tag"
    >
      <a>
        Title: Entry 1
      </a>
    </span>
    <span
      class="tag"
    >
      <a>
        Title: Entry 2
      </a>
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2ManyTags  and slot for Resource.Form snapshot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div
      class="taginput control"
    >
      <div
        class="taginput-container is-focusable"
      >
        <span
          class="tag is-primary"
        >
          <span
            class=""
          >
            <div>
              Entry 1
            </div>
          </span>
           
          <a
            class="delete is-small"
            role="button"
          />
        </span>
        <span
          class="tag is-primary"
        >
          <span
            class=""
          >
            <div>
              Entry 2
            </div>
          </span>
           
          <a
            class="delete is-small"
            role="button"
          />
        </span>
         
        <div
          class="autocomplete control"
        >
          <div
            class="control is-clearfix"
          >
            <input
              autocomplete="off"
              class="input"
              type="text"
            />
             
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="dropdown-menu"
            style="display: none;"
          >
            <div
              class="dropdown-content"
              style="display: none;"
            >
              <!---->
                
              <div
                class="dropdown-item is-disabled"
              >
                <span
                  class="has-text-grey"
                >
                  No data found with current filter.
                </span>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Many2ManyTags for Resource.Form snapshot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div
      class="taginput control"
    >
      <div
        class="taginput-container is-focusable"
      >
        <span
          class="tag is-primary"
        >
          <span
            class=""
          >
            <span>
              
            Go to =&gt; Entry 1
          
            </span>
          </span>
           
          <a
            class="delete is-small"
            role="button"
          />
        </span>
        <span
          class="tag is-primary"
        >
          <span
            class=""
          >
            <span>
              
            Go to =&gt; Entry 2
          
            </span>
          </span>
           
          <a
            class="delete is-small"
            role="button"
          />
        </span>
         
        <div
          class="autocomplete control"
        >
          <div
            class="control is-clearfix"
          >
            <input
              autocomplete="off"
              class="input"
              type="text"
            />
             
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="dropdown-menu"
            style="display: none;"
          >
            <div
              class="dropdown-content"
              style="display: none;"
            >
              <!---->
                
              <div
                class="dropdown-item is-disabled"
              >
                <span
                  class="has-text-grey"
                >
                  No data found with current filter.
                </span>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;
